--- a/resources/index.html
+++ b/resources/index.html
@@ -14,6 +14,7 @@
       <div>
         <a href="#" onclick="openDocs();">Docs</a> &middot;  
         <a href="#" onclick="openTutorial();">Video tutorial</a>
+        <h1>UMM HI???</h1>
       </div>
     </div>
     <!-- Neutralino.js client. This file is gitignored, 
