Integration of Bootstrap Styling

--- a/resources/index.html
+++ b/resources/index.html
@@ -4,17 +4,12 @@
     <meta charset="UTF-8">
     <title>NeutralinoJs sample app</title>
     <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
   </head>
   <body>
-    <div id="neutralinoapp">
-      <h1>NeutralinoJs</h1>
-      <div id="info"></div>
-      <br/>
-      <img src="/icons/logo.gif" alt="Neutralinojs" />
-      <div>
-        <a href="#" onclick="openDocs();">Docs</a> &middot;  
-        <a href="#" onclick="openTutorial();">Video tutorial</a>
-        <h1>UMM HI???</h1>
+    <div class="container">
+      <div id="wrapper">
+        
       </div>
     </div>
     <!-- Neutralino.js client. This file is gitignored, 
@@ -24,5 +19,6 @@
     <script src="/js/neutralino.js"></script>
     <!-- Your app's source files -->
     <script src="/js/main.js"></script>
+    <script src="js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
