Elements Modified and Added Dependencies

--- a/resources/html/transactions.html
+++ b/resources/html/transactions.html
@@ -26,10 +26,10 @@
 
         <a
           class="nav-link mb-3"
-          data-bs-toggle="expand"
+          data-bs-toggle="collapse"
           data-bs-target="#submenu"
           role="button"
-          aria-expanded="true"
+          aria-expanded="false"
           aria-controls="submenu"
         >
         <p></p>
@@ -40,8 +40,8 @@
             >Bookshelf <i class="bi bi-caret-down"></i
           ></span>
         </a>
-        <div class="sub-menu expand mb-1" id="submenu">
-          <a href="./bookshelf-books.html" class="nav-link mb-2 active">
+        <div class="sub-menu collapse mb-1" id="submenu">
+          <a href="./bookshelf-books.html" class="nav-link mb-2">
             <p></p>
             <span class="icon">
               <i class="bi bi-book-fill"></i>
@@ -57,7 +57,7 @@
           </a>
         </div>
 
-        <a class="nav-link mb-3" href="./transactions.html">
+        <a class="nav-link mb-3 active" href="./transactions.html">
           <p></p>
           <span class="icon">
             <i class="bi bi-person-badge"></i>
