--- a/resources/html/transactions.html
+++ b/resources/html/transactions.html
@@ -82,6 +82,7 @@
     </main>
 
     <script src="../js/neutralino.js"></script>
+    <script src="../modules/sql-wasm.js"></script>
     <script src="../js/main.js"></script>
     <script src="../js/bootstrap.bundle.js"></script>
   </body>
