--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -78,6 +78,9 @@
     <!-- MAIN -->
 
     <main class="main-content">
+      <div id="image-container">
+        <img src="../images/bcu_building2.jpg" alt="" id="background" />
+      </div>
       <h2>Dashboard</h2>
       <div class="container text-center">
         <!-- STATISTICS -->
@@ -88,11 +91,13 @@
                 <div class="card-title">
                   <h4>Stats</h4>
                 </div>
-                <hr>
+                <hr />
                 <div class="row mb-3">
                   <div class="col">
                     <div class="card">
-                      <div class="card-body d-flex justify-content-around align-items-center">
+                      <div
+                        class="card-body d-flex justify-content-around align-items-center"
+                      >
                         <h5>Total Books</h5>
                         <h5 id="totalBooks">0</h5>
                       </div>
@@ -100,7 +105,9 @@
                   </div>
                   <div class="col">
                     <div class="card">
-                      <div class="card-body d-flex justify-content-around align-items-center">
+                      <div
+                        class="card-body d-flex justify-content-around align-items-center"
+                      >
                         <h5>Borrowed Books</h5>
                         <h5 id="borrowedBooks">0</h5>
                       </div>
@@ -111,7 +118,9 @@
                 <div class="row">
                   <div class="col">
                     <div class="card">
-                      <div class="card-body d-flex justify-content-around align-items-center">
+                      <div
+                        class="card-body d-flex justify-content-around align-items-center"
+                      >
                         <h5>Overdue Books</h5>
                         <h5 id="overdueBooks">0</h5>
                       </div>
@@ -119,7 +128,9 @@
                   </div>
                   <div class="col">
                     <div class="card">
-                      <div class="card-body d-flex justify-content-around align-items-center">
+                      <div
+                        class="card-body d-flex justify-content-around align-items-center"
+                      >
                         <h5>Active Students</h5>
                         <h5 id="activeStudents">0</h5>
                       </div>
@@ -138,7 +149,10 @@
                 <div class="card-title">
                   <h4>Notifications</h4>
                 </div>
-                <hr>
+                <hr />
+                <div class="card-body">
+                  <p><--Overdue books will show here--></p>
+                </div>
               </div>
             </div>
           </div>
@@ -149,7 +163,10 @@
                 <div class="card-title">
                   <h4>Recent Activity</h4>
                 </div>
-                <hr>
+                <hr />
+                <div class="card-body">
+                  <p><--Recent transactions will show here--></p>
+                </div>
               </div>
             </div>
           </div>
@@ -162,7 +179,25 @@
                 <div class="card-title">
                   <h4>Quick Actions</h4>
                 </div>
-                <hr>
+                <hr />
+                <div class="d-grid gap-2">
+                  <div class="d-grid gap-2 d-md-block">
+                    <button class="col btn btn-primary btn-sm" type="button">
+                      Add Books
+                    </button>
+                    <button class="col btn btn-primary btn-sm" type="button">
+                      Achive Books
+                    </button>
+                  </div>
+                  <div class="d-grid gap-2 d-md-block">
+                    <button class="col btn btn-primary btn-sm" type="button">
+                      Add a Student Record
+                    </button>
+                    <button class="col btn btn-primary btn-sm" type="button">
+                      Transactions
+                    </button>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -170,10 +205,11 @@
       </div>
     </main>
 
-    <script src="../js/neutralino.js"></script>
-    <script src="../modules/sql-wasm.js"></script>
-    <script src="../js/database-connection.js"></script>
-    <script src="../js/main.js"></script>
     <script src="../js/bootstrap.bundle.js"></script>
+    <script src="../js/neutralino.js"></script>
+    <script src="../js/main.js"></script>
+    <script src="../js/sql-wasm.js"></script>
+    <script src="../js/database-connection.js"></script>
+    <script src="../js/app.js"></script>
   </body>
 </html>
