--- a/resources/html/bookshelf-books.html
+++ b/resources/html/bookshelf-books.html
@@ -78,12 +78,43 @@
     <!-- MAIN -->
 
     <main class="main-content">
-      <h2>Main Content</h2>
+      <div id="image-container">
+        <img src="../images/bcu_building2.jpg" alt="" id="background" />
+      </div>
+      <div class="btn-group">
+        <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">Filter</button>
+        <ul class="dropdown-menu">
+          <li><a class="dropdown-item" href="#">CBA</a></li>
+          <li><a class="dropdown-item" href="#">CTELA</a></li>
+          <li><a class="dropdown-item" href="#">CCJE</a></li>
+          <li><a class="dropdown-item" href="#">CoE</a></li>
+          <li><a class="dropdown-item" href="#">CHTM</a></li>
+          <li><a class="dropdown-item" href="#">CNSM</a></li>
+          <li><a class="dropdown-item" href="#">GS</a></li>
+          <li><a class="dropdown-item" href="#">ES</a></li>
+          <li><a class="dropdown-item" href="#">JHS</a></li>
+          <li><a class="dropdown-item" href="#">SHS</a></li>
+        </ul>
+      </div>
+      <h2>Books</h2>
+      <table class="table table-striped table-hover">
+        <thead>
+          <tr class="table-info">
+            <th>Book Title</th>
+            <th>Author</th>
+            <th>Publication Date</th>
+            <th>Copies</th>
+            <th>Department</th>
+          </tr>
+        </thead>
+      </table>
     </main>
 
-    <script src="../js/neutralino.js"></script>
-    <script src="../modules/sql-wasm.js"></script>
-    <script src="../js/main.js"></script>
     <script src="../js/bootstrap.bundle.js"></script>
+    <script src="../js/neutralino.js"></script>
+    <script src="../js/main.js"></script>
+    <script src="../js/sql-wasm.js"></script>
+    <script src="../js/database-connection.js"></script>
+    <script src="../js/app.js"></script>
   </body>
 </html>
