--- a/resources/html/bookshelf-copies.html
+++ b/resources/html/bookshelf-copies.html
@@ -78,12 +78,28 @@
     <!-- MAIN -->
 
     <main class="main-content">
-      <h2>Main Content</h2>
+      <div id="image-container">
+        <img src="../images/bcu_building2.jpg" alt="" id="background" />
+      </div>
+      <h2>Individual Copy of Books</h2>
+      <table class="table table-striped table-hover">
+        <thead>
+          <tr class="table-info">
+            <th>Copy ID</th>
+            <th>Book ID</th>
+            <th>Status</th>
+            <th>Borrowed By</th>
+            <th>Condition</th>
+          </tr>
+        </thead>
+      </table>
     </main>
 
-    <script src="../js/neutralino.js"></script>
-    <script src="../modules/sql-wasm.js"></script>
-    <script src="../js/main.js"></script>
     <script src="../js/bootstrap.bundle.js"></script>
+    <script src="../js/neutralino.js"></script>
+    <script src="../js/main.js"></script>
+    <script src="../js/sql-wasm.js"></script>
+    <script src="../js/database-connection.js"></script>
+    <script src="../js/app.js"></script>
   </body>
 </html>
