--- a/resources/html/students.html
+++ b/resources/html/students.html
@@ -32,7 +32,7 @@
           aria-expanded="false"
           aria-controls="submenu"
         >
-        <p></p>
+          <p></p>
           <span class="icon">
             <i class="bi bi-book"></i>
           </span>
@@ -78,12 +78,46 @@
     <!-- MAIN -->
 
     <main class="main-content">
-      <h2>Main</h2>
+      <div id="image-container">
+        <img src="../images/bcu_building2.jpg" alt="" id="background" />
+      </div>
+      <h2>Student List</h2>
+      <div class="btn-group">
+        <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">Filter</button>
+        <ul class="dropdown-menu">
+          <li><a class="dropdown-item" href="#">CBA</a></li>
+          <li><a class="dropdown-item" href="#">CTELA</a></li>
+          <li><a class="dropdown-item" href="#">CCJE</a></li>
+          <li><a class="dropdown-item" href="#">CoE</a></li>
+          <li><a class="dropdown-item" href="#">CHTM</a></li>
+          <li><a class="dropdown-item" href="#">CNSM</a></li>
+          <li><a class="dropdown-item" href="#">GS</a></li>
+          <li><a class="dropdown-item" href="#">ES</a></li>
+          <li><a class="dropdown-item" href="#">JHS</a></li>
+          <li><a class="dropdown-item" href="#">SHS</a></li>
+        </ul>
+      </div>
+
+      <table class="table table-striped table-hover">
+        <thead>
+          <tr class="table-info">
+            <th>Student ID</th>
+            <th>Student Name</th>
+            <th>Year</th>
+            <th>Course</th>
+            <th>Department</th>
+            <th>Status</th>
+            <th>Date Borrowed</th>
+          </tr>
+        </thead>
+      </table>
     </main>
 
-    <script src="../js/neutralino.js"></script>
-    <script src="../modules/sql-wasm.js"></script>
-    <script src="../js/main.js"></script>
     <script src="../js/bootstrap.bundle.js"></script>
+    <script src="../js/neutralino.js"></script>
+    <script src="../js/main.js"></script>
+    <script src="../js/sql-wasm.js"></script>
+    <script src="../js/database-connection.js"></script>
+    <script src="../js/app.js"></script>
   </body>
 </html>
