--- a/resources/html/transactions.html
+++ b/resources/html/transactions.html
@@ -78,12 +78,31 @@
     <!-- MAIN -->
 
     <main class="main-content">
-      <h2>Main Content</h2>
+      <div id="image-container">
+        <img src="../images/bcu_building2.jpg" alt="" id="background" />
+      </div>
+      <h2>Transaction History</h2>
+      <table class="table table-striped table-hover">
+        <thead>
+          <tr class="table-info">
+            <th>Transaction Type</th>
+            <th>Copy ID</th>
+            <th>Book Title</th>
+            <th>Status</th>
+            <th>Made By</th>
+            <th>Date</th>
+            <th>Date Returned</th>
+            <th>Due Date</th>
+          </tr>
+        </thead>
+      </table>
     </main>
 
-    <script src="../js/neutralino.js"></script>
-    <script src="../modules/sql-wasm.js"></script>
-    <script src="../js/main.js"></script>
     <script src="../js/bootstrap.bundle.js"></script>
+    <script src="../js/neutralino.js"></script>
+    <script src="../js/main.js"></script>
+    <script src="../js/sql-wasm.js"></script>
+    <script src="../js/database-connection.js"></script>
+    <script src="../js/app.js"></script>
   </body>
 </html>
