--- a/resources/html/bookshelf-books.html
+++ b/resources/html/bookshelf-books.html
@@ -77,26 +77,17 @@
 
     <!-- MAIN -->
 
-    <main class="main-content">
+    <main class="main-content d-flex flex-column">
       <div id="image-container">
         <img src="../images/bcu_building2.jpg" alt="" id="background" />
       </div>
-      <div class="btn-group">
+      <h2>Books</h2>
+      <div class="btn-group align-self-md-end">
         <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">Filter</button>
-        <ul class="dropdown-menu">
-          <li><a class="dropdown-item" href="#">CBA</a></li>
-          <li><a class="dropdown-item" href="#">CTELA</a></li>
-          <li><a class="dropdown-item" href="#">CCJE</a></li>
-          <li><a class="dropdown-item" href="#">CoE</a></li>
-          <li><a class="dropdown-item" href="#">CHTM</a></li>
-          <li><a class="dropdown-item" href="#">CNSM</a></li>
-          <li><a class="dropdown-item" href="#">GS</a></li>
-          <li><a class="dropdown-item" href="#">ES</a></li>
-          <li><a class="dropdown-item" href="#">JHS</a></li>
-          <li><a class="dropdown-item" href="#">SHS</a></li>
+        <ul class="dropdown-menu" id="departmentFilter">
+          
         </ul>
       </div>
-      <h2>Books</h2>
       <table class="table table-striped table-hover">
         <thead>
           <tr class="table-info">
@@ -107,7 +98,10 @@
             <th>Department</th>
           </tr>
         </thead>
+        <tbody>
+        </tbody>
       </table>
+      <button type="button" class="btn btn-info">Add Books</button>
     </main>
 
     <script src="../js/bootstrap.bundle.js"></script>
@@ -115,6 +109,7 @@
     <script src="../js/main.js"></script>
     <script src="../js/sql-wasm.js"></script>
     <script src="../js/database-connection.js"></script>
+    <script src="../js/getFromDB.js"></script>
     <script src="../js/app.js"></script>
   </body>
 </html>
