--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -96,7 +96,7 @@
                   <div class="col">
                     <div class="card">
                       <div
-                        class="card-body d-flex justify-content-around align-items-center"
+                        class="card-body d-flex justify-content-between align-items-center"
                       >
                         <h5>Total Books</h5>
                         <h5 id="totalBooks">0</h5>
@@ -106,7 +106,7 @@
                   <div class="col">
                     <div class="card">
                       <div
-                        class="card-body d-flex justify-content-around align-items-center"
+                        class="card-body d-flex justify-content-between align-items-center"
                       >
                         <h5>Borrowed Books</h5>
                         <h5 id="borrowedBooks">0</h5>
@@ -119,7 +119,7 @@
                   <div class="col">
                     <div class="card">
                       <div
-                        class="card-body d-flex justify-content-around align-items-center"
+                        class="card-body d-flex justify-content-between align-items-center"
                       >
                         <h5>Overdue Books</h5>
                         <h5 id="overdueBooks">0</h5>
@@ -129,7 +129,7 @@
                   <div class="col">
                     <div class="card">
                       <div
-                        class="card-body d-flex justify-content-around align-items-center"
+                        class="card-body d-flex justify-content-between align-items-center"
                       >
                         <h5>Active Students</h5>
                         <h5 id="activeStudents">0</h5>
