--- a/resources/html/transactions.html
+++ b/resources/html/transactions.html
@@ -82,6 +82,10 @@
         <img src="../images/bcu_building2.jpg" alt="" id="background" />
       </div>
       <h2>Transaction History</h2>
+      <form class="d-flex mb-2">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-success" type="submit"><span class="bi bi-search"></span></button>
+      </form>
       <table class="table table-striped table-hover">
         <thead>
           <tr class="table-info">
@@ -103,6 +107,7 @@
     <script src="../js/main.js"></script>
     <script src="../js/sql-wasm.js"></script>
     <script src="../js/database-connection.js"></script>
+    <script src="../js/getFromDB.js"></script>
     <script src="../js/app.js"></script>
   </body>
 </html>
