Added Books And Dashboard Functionality

--- a/resources/html/students.html
+++ b/resources/html/students.html
@@ -117,6 +117,7 @@
     <script src="../js/sql-wasm.js"></script>
     <script src="../js/database-connection.js"></script>
     <script src="../js/getFromDB.js"></script>
+    <script src="../js/renderer.js"></script>
     <script src="../js/app.js"></script>
   </body>
 </html>
