--- a/resources/html/bookshelf-books.html
+++ b/resources/html/bookshelf-books.html
@@ -32,7 +32,7 @@
           aria-expanded="true"
           aria-controls="submenu"
         >
-        <p></p>
+          <p></p>
           <span class="icon">
             <i class="bi bi-book"></i>
           </span>
@@ -83,24 +83,30 @@
       </div>
       <h2>Books</h2>
       <div class="btn-group align-self-md-end">
-        <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">Filter</button>
-        <ul class="dropdown-menu" id="departmentFilter">
-          
-        </ul>
+        <button
+          class="btn btn-secondary dropdown-toggle"
+          type="button"
+          data-bs-toggle="dropdown"
+          aria-expanded="false"
+        >
+          Filter
+        </button>
+        <ul class="dropdown-menu" id="departmentFilter"></ul>
       </div>
+      <div id="pager-top" class="d-flex align-self-md-center"></div>
       <table class="table table-striped table-hover">
         <thead>
           <tr class="table-info">
             <th>Book Title</th>
             <th>Author</th>
             <th>Publication Date</th>
-            <th>Copies</th>
             <th>Department</th>
+            <th>Copies</th>
           </tr>
         </thead>
-        <tbody>
-        </tbody>
+        <tbody id="booksTableBody"></tbody>
       </table>
+      <div id="pager-bottom" class="d-flex align-self-md-center"></div>
       <button type="button" class="btn btn-info">Add Books</button>
     </main>
 
@@ -110,6 +116,7 @@
     <script src="../js/sql-wasm.js"></script>
     <script src="../js/database-connection.js"></script>
     <script src="../js/getFromDB.js"></script>
+    <script src="../js/renderer.js"></script>
     <script src="../js/app.js"></script>
   </body>
 </html>
