--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -210,6 +210,8 @@
     <script src="../js/main.js"></script>
     <script src="../js/sql-wasm.js"></script>
     <script src="../js/database-connection.js"></script>
+    <script src="../js/getFromDB.js"></script>
+    <script src="../js/dashboard.js"></script>
     <script src="../js/app.js"></script>
   </body>
 </html>
