--- a/resources/html/bookshelf-copies.html
+++ b/resources/html/bookshelf-copies.html
@@ -91,6 +91,7 @@
           <tr class="table-info">
             <th>Copy ID</th>
             <th>Book ID</th>
+            <th>Title</th>
             <th>Status</th>
             <th>Borrowed By</th>
             <th>Condition</th>
@@ -106,6 +107,7 @@
     <script src="../js/database-connection.js"></script>
     <script src="../js/getFromDB.js"></script>
     <script src="../js/renderer.js"></script>
+    <script src="../js/popup.js"></script>
     <script src="../js/app.js"></script>
   </body>
 </html>
