--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -182,20 +182,20 @@
                 <hr />
                 <div class="d-grid gap-2">
                   <div class="d-grid gap-2 d-md-block">
-                    <button class="col btn btn-primary btn-sm" type="button">
+                    <a href="./bookshelf-books.html#addBookBtn" role="button" class="col btn btn-primary btn-sm">
                       Add Books
-                    </button>
-                    <button class="col btn btn-primary btn-sm" type="button">
-                      Achive Books
+                    </a>
+                    <button class="col btn btn-primary btn-sm" type="button" id="archiveBookBtn">
+                      Archive Books
                     </button>
                   </div>
                   <div class="d-grid gap-2 d-md-block">
-                    <button class="col btn btn-primary btn-sm" type="button">
+                    <button class="col btn btn-primary btn-sm" type="button" id="addStudentRecordBtn">
                       Add a Student Record
                     </button>
-                    <button class="col btn btn-primary btn-sm" type="button">
+                    <a href="./transactions.html" role="button" class="col btn btn-primary btn-sm">
                       Transactions
-                    </button>
+                    </a>
                   </div>
                 </div>
               </div>
@@ -212,6 +212,7 @@
     <script src="../js/database-connection.js"></script>
     <script src="../js/getFromDB.js"></script>
     <script src="../js/dashboard.js"></script>
+    <script src="../js/popup.js"></script>
     <script src="../js/app.js"></script>
   </body>
 </html>
