--- a/resources/html/students.html
+++ b/resources/html/students.html
@@ -27,20 +27,20 @@
         <a
           class="nav-link mb-3"
           data-bs-toggle="collapse"
-          data-bs-target="#submenu"
+          data-bs-target="#submenuBookshelf"
           role="button"
           aria-expanded="false"
-          aria-controls="submenu"
+          aria-controls="submenuBookshelf"
         >
           <p></p>
           <span class="icon">
             <i class="bi bi-book"></i>
           </span>
-          <span class="description"
-            >Bookshelf <i class="bi bi-caret-down"></i
-          ></span>
+          <span class="description">
+            Bookshelf <i class="bi bi-caret-down"></i>
+          </span>
         </a>
-        <div class="sub-menu collapse mb-1" id="submenu">
+        <div class="sub-menu collapse mb-1" id="submenuBookshelf">
           <a href="./bookshelf-books.html" class="nav-link mb-2">
             <p></p>
             <span class="icon">
@@ -57,15 +57,41 @@
           </a>
         </div>
 
-        <a class="nav-link mb-3" href="./transactions.html">
+        <!-- Transactions -->
+        <a
+          class="nav-link mb-3"
+          data-bs-toggle="collapse"
+          data-bs-target="#submenuTransactions"
+          role="button"
+          aria-expanded="false"
+          aria-controls="submenuTransactions"
+        >
           <p></p>
           <span class="icon">
-            <i class="bi bi-person-badge"></i>
+            <i class="bi bi-person-lines-fill"></i>
           </span>
-          <span class="description">Transactions</span>
+          <span class="description">
+            Transactions <i class="bi bi-caret-down"></i>
+          </span>
         </a>
+        <div class="sub-menu collapse mb-1" id="submenuTransactions">
+          <a href="./transactions_borrow.html" class="nav-link mb-2">
+            <p></p>
+            <span class="icon">
+              <i class="bi bi-calendar-range-fill"></i>
+            </span>
+            <span class="description">Borrows</span>
+          </a>
+          <a href="./transaction_library.html" class="nav-link mb-2">
+            <p></p>
+            <span class="icon">
+              <i class="bi bi-database-fill-gear"></i>
+            </span>
+            <span class="description">Library</span>
+          </a>
+        </div>
 
-        <a class="nav-link mb-3 active" href="./students.html">
+        <a class="nav-link mb-3" href="./students.html">
           <p></p>
           <span class="icon">
             <i class="bi bi-person-badge"></i>
@@ -108,7 +134,88 @@
         <tbody>
         </tbody>
       </table>
-      <button type="button" class="btn btn-info">Add student Record</button>
+      <button id="addStudentBtn" type="button" class="btn btn-info" data-bs-toggle="modal" data-bs-target="#addStudentContent">Add student Record</button>
+
+      <div class="modal fade" id="addStudentContent" tabindex="-1">
+        <div class="modal-dialog modal-dialog-centered">
+          <div class="modal-content">
+            <div class="modal-header bg-info text-white">
+              <h5 class="modal-title">Add Student</h5>
+              <button
+                type="button"
+                class="btn-close"
+                data-bs-dismiss="modal"
+                aria-label="Close"
+              ></button>
+            </div>
+            <div class="modal-body">
+              <div class="input-group input-group-sm mb-3">
+                <span class="input-group-text">Student ID</span>
+                <input
+                  name="student_id"
+                  type="text"
+                  class="form-control"
+                  required
+                />
+              </div>
+              <div class="input-group input-group-sm mb-3">
+                <span class="input-group-text">Student Name</span>
+                <input
+                  name="student_name"
+                  type="text"
+                  class="form-control"
+                  required
+                />
+              </div>
+              <div class="input-group input-group-sm mb-3">
+                <span class="input-group-text">Course</span>
+                <select
+                  name="course_id"
+                  id="courseSelect"
+                  class="form-control"
+                  required
+                >
+                  <option value="">Loading...</option>
+                </select>
+              </div>
+              <div class="input-group input-group-sm mb-3">
+                <span class="input-group-text">Year Level</span>
+                <input
+                  name="student_year"
+                  type="number"
+                  class="form-control"
+                  required
+                />
+              </div>
+              <div class="input-group input-group-sm mb-3">
+                <span class="input-group-text">Contact Number</span>
+                <input
+                  name="contact_number"
+                  type="number"
+                  max="11"
+                  class="form-control"
+                  required
+                />
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <script>
+        document.addEventListener("DOMContentLoaded", () => {
+          const params = new URLSearchParams(window.location.search);
+          const modalId = params.get("modal");
+
+          if (modalId) {
+            const modalEl = document.getElementById(modalId);
+            if (modalEl) {
+              const modal = new bootstrap.Modal(modalEl);
+              modal.show();
+            }
+          }
+        });
+      </script>
     </main>
 
     <script src="../js/bootstrap.bundle.js"></script>
@@ -116,8 +223,14 @@
     <script src="../js/main.js"></script>
     <script src="../js/sql-wasm.js"></script>
     <script src="../js/database-connection.js"></script>
+    <script src="../js/create-table.js"></script>
+    <script src="../js/database-operations.js"></script>
+    <script src="../js/frontend-operations.js"></script>
     <script src="../js/getFromDB.js"></script>
+    <script src="../js/insertIntoDB.js"></script>
     <script src="../js/renderer.js"></script>
+    <script src="../js/filter.js"></script>
+    <script src="../js/search.js"></script>
     <script src="../js/popup.js"></script>
     <script src="../js/app.js"></script>
   </body>
