--- a/resources/html/transaction_library.html
+++ b/resources/html/transaction_library.html
@@ -27,20 +27,20 @@
         <a
           class="nav-link mb-3"
           data-bs-toggle="collapse"
-          data-bs-target="#submenu"
+          data-bs-target="#submenuBookshelf"
           role="button"
           aria-expanded="false"
-          aria-controls="submenu"
+          aria-controls="submenuBookshelf"
         >
-        <p></p>
+          <p></p>
           <span class="icon">
             <i class="bi bi-book"></i>
           </span>
-          <span class="description"
-            >Bookshelf <i class="bi bi-caret-down"></i
-          ></span>
+          <span class="description">
+            Bookshelf <i class="bi bi-caret-down"></i>
+          </span>
         </a>
-        <div class="sub-menu collapse mb-1" id="submenu">
+        <div class="sub-menu collapse mb-1" id="submenuBookshelf">
           <a href="./bookshelf-books.html" class="nav-link mb-2">
             <p></p>
             <span class="icon">
@@ -57,13 +57,39 @@
           </a>
         </div>
 
-        <a class="nav-link mb-3 active" href="./transactions.html">
+        <!-- Transactions -->
+        <a
+          class="nav-link mb-3"
+          data-bs-toggle="collapse"
+          data-bs-target="#submenuTransactions"
+          role="button"
+          aria-expanded="false"
+          aria-controls="submenuTransactions"
+        >
           <p></p>
           <span class="icon">
-            <i class="bi bi-person-badge"></i>
+            <i class="bi bi-person-lines-fill"></i>
           </span>
-          <span class="description">Transactions</span>
+          <span class="description">
+            Transactions <i class="bi bi-caret-down"></i>
+          </span>
         </a>
+        <div class="sub-menu collapse mb-1" id="submenuTransactions">
+          <a href="./transactions_borrow.html" class="nav-link mb-2">
+            <p></p>
+            <span class="icon">
+              <i class="bi bi-calendar-range-fill"></i>
+            </span>
+            <span class="description">Borrows</span>
+          </a>
+          <a href="./transaction_library.html" class="nav-link mb-2">
+            <p></p>
+            <span class="icon">
+              <i class="bi bi-database-fill-gear"></i>
+            </span>
+            <span class="description">Library</span>
+          </a>
+        </div>
 
         <a class="nav-link mb-3" href="./students.html">
           <p></p>
@@ -81,7 +107,7 @@
       <div id="image-container">
         <img src="../images/bcu_building2.jpg" alt="" id="background" />
       </div>
-      <h2>Transaction History</h2>
+      <h2>Library Transaction History</h2>
       <form class="d-flex mb-2">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-success" type="submit"><span class="bi bi-search"></span></button>
@@ -89,14 +115,9 @@
       <table class="table table-striped table-hover">
         <thead>
           <tr class="table-info">
-            <th>Transaction Type</th>
-            <th>Copy ID</th>
-            <th>Book Title</th>
-            <th>Status</th>
+            <th>Transaction Name</th>
             <th>Made By</th>
             <th>Date</th>
-            <th>Date Returned</th>
-            <th>Due Date</th>
           </tr>
         </thead>
       </table>
@@ -107,8 +128,14 @@
     <script src="../js/main.js"></script>
     <script src="../js/sql-wasm.js"></script>
     <script src="../js/database-connection.js"></script>
+    <script src="../js/create-table.js"></script>
+    <script src="../js/database-operations.js"></script>
+    <script src="../js/frontend-operations.js"></script>
     <script src="../js/getFromDB.js"></script>
+    <script src="../js/insertIntoDB.js"></script>
     <script src="../js/renderer.js"></script>
+    <script src="../js/filter.js"></script>
+    <script src="../js/search.js"></script>
     <script src="../js/popup.js"></script>
     <script src="../js/app.js"></script>
   </body>
