--- a/resources/html/transactions_borrow.html
+++ b/resources/html/transactions_borrow.html
@@ -57,7 +57,6 @@
           </a>
         </div>
 
-        <!-- Transactions -->
         <a
           class="nav-link mb-3"
           data-bs-toggle="collapse"
@@ -107,38 +106,25 @@
       <div id="image-container">
         <img src="../images/bcu_building2.jpg" alt="" id="background" />
       </div>
-      <h2>Individual Copy of Books</h2>
+      <h2>Borrow Transaction History</h2>
       <form class="d-flex mb-2">
-        <input
-          class="form-control me-2"
-          type="search"
-          placeholder="Search"
-          aria-label="Search"
-        />
-        <button class="btn btn-success" type="submit">
-          <span class="bi bi-search"></span>
-        </button>
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-success" type="submit"><span class="bi bi-search"></span></button>
       </form>
-
-      <div id="pager-top"></div>
-
       <table class="table table-striped table-hover">
         <thead>
           <tr class="table-info">
+            <th>Transaction Type</th>
             <th>Copy ID</th>
-            <th>Book ID</th>
-            <th>Title</th>
+            <th>Book Title</th>
             <th>Status</th>
-            <th>Borrowed By</th>
-            <th>Condition</th>
+            <th>Made By</th>
+            <th>Date</th>
+            <th>Date Returned</th>
+            <th>Due Date</th>
           </tr>
         </thead>
-        <tbody id="bookCopiesTableBody">
-          <!-- Rows will be inserted here -->
-        </tbody>
       </table>
-
-      <div id="pager-bottom"></div>
     </main>
 
     <script src="../js/bootstrap.bundle.js"></script>
