Added New Functionalities, then Fixed Existing Issues

--- a/resources/html/bookshelf-books.html
+++ b/resources/html/bookshelf-books.html
@@ -40,8 +40,8 @@
             Bookshelf <i class="bi bi-caret-down"></i>
           </span>
         </a>
-        <div class="sub-menu collapse mb-1" id="submenuBookshelf">
-          <a href="./bookshelf-books.html" class="nav-link mb-2">
+        <div class="sub-menu expand mb-1" id="submenuBookshelf">
+          <a href="./bookshelf-books.html" class="nav-link mb-2 active">
             <p></p>
             <span class="icon">
               <i class="bi bi-book-fill"></i>
@@ -246,6 +246,7 @@
     <script src="../js/create-table.js"></script>
     <script src="../js/database-operations.js"></script>
     <script src="../js/frontend-operations.js"></script>
+    <script src="../js/library-operations.js"></script>
     <script src="../js/getFromDB.js"></script>
     <script src="../js/insertIntoDB.js"></script>
     <script src="../js/renderer.js"></script>
