--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -16,7 +16,7 @@
         <a href="./index.html" class="d-flex justify-content-center mb-5"
           ><img src="../icons/appIcon.png" alt="Logo"
         /></a>
-        <a class="nav-link mb-3" href="./index.html" aria-current="page">
+        <a class="nav-link mb-3 active" href="./index.html" aria-current="page">
           <p></p>
           <span class="icon">
             <i class="bi bi-grid-1x2"></i>
@@ -236,9 +236,11 @@
     <script src="../js/main.js"></script>
     <script src="../js/sql-wasm.js"></script>
     <script src="../js/database-connection.js"></script>
-    <script src="../js/create-table.js"></script>
     <script src="../js/database-operations.js"></script>
+    <script src="../js/create-table.js"></script>
+    <script src="../js/seed-tables.js"></script>
     <script src="../js/frontend-operations.js"></script>
+    <script src="../js/library-operations.js"></script>
     <script src="../js/getFromDB.js"></script>
     <script src="../js/insertIntoDB.js"></script>
     <script src="../js/dashboard.js"></script>
