--- a/resources/html/students.html
+++ b/resources/html/students.html
@@ -91,7 +91,7 @@
           </a>
         </div>
 
-        <a class="nav-link mb-3" href="./students.html">
+        <a class="nav-link mb-3 active" href="./students.html">
           <p></p>
           <span class="icon">
             <i class="bi bi-person-badge"></i>
@@ -226,6 +226,7 @@
     <script src="../js/create-table.js"></script>
     <script src="../js/database-operations.js"></script>
     <script src="../js/frontend-operations.js"></script>
+    <script src="../js/library-operations.js"></script>
     <script src="../js/getFromDB.js"></script>
     <script src="../js/insertIntoDB.js"></script>
     <script src="../js/renderer.js"></script>
