--- a/resources/html/transaction_library.html
+++ b/resources/html/transaction_library.html
@@ -74,7 +74,7 @@
             Transactions <i class="bi bi-caret-down"></i>
           </span>
         </a>
-        <div class="sub-menu collapse mb-1" id="submenuTransactions">
+        <div class="sub-menu expand mb-1" id="submenuTransactions">
           <a href="./transactions_borrow.html" class="nav-link mb-2">
             <p></p>
             <span class="icon">
@@ -82,7 +82,7 @@
             </span>
             <span class="description">Borrows</span>
           </a>
-          <a href="./transaction_library.html" class="nav-link mb-2">
+          <a href="./transaction_library.html" class="nav-link mb-2 active">
             <p></p>
             <span class="icon">
               <i class="bi bi-database-fill-gear"></i>
@@ -131,6 +131,7 @@
     <script src="../js/create-table.js"></script>
     <script src="../js/database-operations.js"></script>
     <script src="../js/frontend-operations.js"></script>
+    <script src="../js/library-operations.js"></script>
     <script src="../js/getFromDB.js"></script>
     <script src="../js/insertIntoDB.js"></script>
     <script src="../js/renderer.js"></script>
