--- a/resources/html/transactions_borrow.html
+++ b/resources/html/transactions_borrow.html
@@ -73,8 +73,8 @@
             Transactions <i class="bi bi-caret-down"></i>
           </span>
         </a>
-        <div class="sub-menu collapse mb-1" id="submenuTransactions">
-          <a href="./transactions_borrow.html" class="nav-link mb-2">
+        <div class="sub-menu expand mb-1" id="submenuTransactions">
+          <a href="./transactions_borrow.html" class="nav-link mb-2 active">
             <p></p>
             <span class="icon">
               <i class="bi bi-calendar-range-fill"></i>
@@ -135,6 +135,7 @@
     <script src="../js/create-table.js"></script>
     <script src="../js/database-operations.js"></script>
     <script src="../js/frontend-operations.js"></script>
+    <script src="../js/library-operations.js"></script>
     <script src="../js/getFromDB.js"></script>
     <script src="../js/insertIntoDB.js"></script>
     <script src="../js/renderer.js"></script>
