--- a/resources/html/bookshelf-copies.html
+++ b/resources/html/bookshelf-copies.html
@@ -40,7 +40,7 @@
             Bookshelf <i class="bi bi-caret-down"></i>
           </span>
         </a>
-        <div class="sub-menu collapse mb-1" id="submenuBookshelf">
+        <div class="sub-menu expand mb-1" id="submenuBookshelf">
           <a href="./bookshelf-books.html" class="nav-link mb-2">
             <p></p>
             <span class="icon">
@@ -48,7 +48,7 @@
             </span>
             <span class="description">Books</span>
           </a>
-          <a href="./bookshelf-copies.html" class="nav-link mb-2">
+          <a href="./bookshelf-copies.html" class="nav-link mb-2 active">
             <p></p>
             <span class="icon">
               <i class="bi bi-book-half"></i>
@@ -149,6 +149,7 @@
     <script src="../js/create-table.js"></script>
     <script src="../js/database-operations.js"></script>
     <script src="../js/frontend-operations.js"></script>
+    <script src="../js/library-operations.js"></script>
     <script src="../js/getFromDB.js"></script>
     <script src="../js/insertIntoDB.js"></script>
     <script src="../js/renderer.js"></script>
